# master_thesis_presentation

./: .gitignore  .gitmodules  README.md  pyproject.toml
app/: forms.py  inference.py  lightweightmodel.py  routes.py
app/static/styles/: style.css
app/templates/: base.html  index.html
