[tool.poetry]
name = "master_thesis_presentation"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.14"
flask = "^1.1"
flask-wtf = "^0.14.2"
"ruamel.yaml" = "^0.16.5"
tensorflow-hub = "^0.5.0"
numpy = "^1.17"
Pillow = "^6.1"
scipy = "^1.3"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
